// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RW Adapter tests Adapter getDataset returns expected result 1`] = `
Object {
  "geoInfo": true,
  "id": "03bfb30e-829f-4299-bab9-b2be1b66b5d4",
  "metadata": Object {
    "columns": Array [
      Object {
        "alias": "Country",
        "columnName": "country",
        "description": undefined,
      },
      Object {
        "alias": "Roundwood Production Employment (thousands)",
        "columnName": "employment_roundwood_production_1000",
        "description": "",
      },
      Object {
        "alias": "Wood Processing Employment (thousands)",
        "columnName": "employment_wood_processing_1000",
        "description": undefined,
      },
      Object {
        "alias": "Pulp and Paper Employment (thousands)",
        "columnName": "employment_pulp_and_paper_1000",
        "description": undefined,
      },
      Object {
        "alias": "Total Forest Sector Employment (thousands)",
        "columnName": "employment_total_for_the_forest_sector_1000",
        "description": undefined,
      },
      Object {
        "alias": "Forest Sector Employment as Share of Total Workforce",
        "columnName": "employment_of_total_labour_force",
        "description": "Percent of the workforce in forest sector employment",
      },
      Object {
        "alias": "Gross Value Added in Roundwood Production (USD, millions)",
        "columnName": "gross_value_added_roundwood_production_us_million",
        "description": "Value added to economy in million USD",
      },
      Object {
        "alias": "Gross Value Added in Wood Processing (USD, millions)",
        "columnName": "gross_value_added_wood_processing_us_million",
        "description": "Value added to economy in million USD",
      },
      Object {
        "alias": "Gross Value Added in Pulp and Paper (USD, millions)",
        "columnName": "gross_value_added_pulp_and_paper_us_million",
        "description": "Value added to economy in million USD",
      },
      Object {
        "alias": "Total Gross Value Added (USD, millions)",
        "columnName": "gross_value_added_total_for_the_forest_sector_us_million",
        "description": "Total value added to economy in million USD",
      },
      Object {
        "alias": "Gross Value Added as Share of GDP",
        "columnName": "gross_value_added_contribution_to_gdp",
        "description": "Contribution of gross value added to GDP",
      },
    ],
  },
  "name": "for.020 Forestry Sector Employment and GDP",
  "provider": "cartodb",
  "relevantFields": Array [
    "country",
    "employment_roundwood_production_1000",
    "employment_wood_processing_1000",
    "employment_pulp_and_paper_1000",
    "employment_total_for_the_forest_sector_1000",
    "employment_of_total_labour_force",
    "gross_value_added_roundwood_production_us_million",
    "gross_value_added_wood_processing_us_million",
    "gross_value_added_pulp_and_paper_us_million",
    "gross_value_added_total_for_the_forest_sector_us_million",
    "gross_value_added_contribution_to_gdp",
  ],
  "tableName": "for_020_forest_employment_gdp_edit",
}
`;

exports[`RW Adapter tests Adapter getDatasetData returns expected result 1`] = `
Array [
  Object {
    "cartodb_id": 3,
    "country": "Sudan",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 1,
    "employment_roundwood_production_1000": 1,
    "employment_total_for_the_forest_sector_1000": 5,
    "employment_wood_processing_1000": 3,
    "gross_value_added_contribution_to_gdp": 0.2,
    "gross_value_added_pulp_and_paper_us_million": 57,
    "gross_value_added_roundwood_production_us_million": 26,
    "gross_value_added_total_for_the_forest_sector_us_million": 117,
    "gross_value_added_wood_processing_us_million": 34,
    "rw_country_code": "SDN",
    "rw_country_name": "Sudan",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 1,
    "country": "Central African Republic",
    "employment_of_total_labour_force": 0.3,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 4,
    "employment_total_for_the_forest_sector_1000": 6,
    "employment_wood_processing_1000": 2,
    "gross_value_added_contribution_to_gdp": 3.5,
    "gross_value_added_pulp_and_paper_us_million": 1,
    "gross_value_added_roundwood_production_us_million": 61,
    "gross_value_added_total_for_the_forest_sector_us_million": 72,
    "gross_value_added_wood_processing_us_million": 10,
    "rw_country_code": "CAF",
    "rw_country_name": "Central African Republic",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 2,
    "country": "Burkina Faso",
    "employment_of_total_labour_force": 0.2,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 2,
    "employment_total_for_the_forest_sector_1000": 17,
    "employment_wood_processing_1000": 15,
    "gross_value_added_contribution_to_gdp": 3.5,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 308,
    "gross_value_added_total_for_the_forest_sector_us_million": 309,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "BFA",
    "rw_country_name": "Burkina Faso",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 4,
    "country": "South Sudan",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 0,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 0,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "SSD",
    "rw_country_name": "South Sudan",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 5,
    "country": "Solomon Islands",
    "employment_of_total_labour_force": 3.9,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 8,
    "employment_total_for_the_forest_sector_1000": 9,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 11.5,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 93,
    "gross_value_added_total_for_the_forest_sector_us_million": 99,
    "gross_value_added_wood_processing_us_million": 6,
    "rw_country_code": "SLB",
    "rw_country_name": "Solomon Islands",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 6,
    "country": "Sri Lanka",
    "employment_of_total_labour_force": 0.3,
    "employment_pulp_and_paper_1000": 5,
    "employment_roundwood_production_1000": 15,
    "employment_total_for_the_forest_sector_1000": 23,
    "employment_wood_processing_1000": 3,
    "gross_value_added_contribution_to_gdp": 0.7,
    "gross_value_added_pulp_and_paper_us_million": 46,
    "gross_value_added_roundwood_production_us_million": 326,
    "gross_value_added_total_for_the_forest_sector_us_million": 395,
    "gross_value_added_wood_processing_us_million": 24,
    "rw_country_code": "LKA",
    "rw_country_name": "Sri Lanka",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 7,
    "country": "Slovakia",
    "employment_of_total_labour_force": 2.2,
    "employment_pulp_and_paper_1000": 7,
    "employment_roundwood_production_1000": 25,
    "employment_total_for_the_forest_sector_1000": 62,
    "employment_wood_processing_1000": 30,
    "gross_value_added_contribution_to_gdp": 2.4,
    "gross_value_added_pulp_and_paper_us_million": 421,
    "gross_value_added_roundwood_production_us_million": 731,
    "gross_value_added_total_for_the_forest_sector_us_million": 2046,
    "gross_value_added_wood_processing_us_million": 894,
    "rw_country_code": "SVK",
    "rw_country_name": "Slovakia",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 8,
    "country": "Suriname",
    "employment_of_total_labour_force": 4.5,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 4,
    "employment_total_for_the_forest_sector_1000": 9,
    "employment_wood_processing_1000": 6,
    "gross_value_added_contribution_to_gdp": 2,
    "gross_value_added_pulp_and_paper_us_million": 1,
    "gross_value_added_roundwood_production_us_million": 41,
    "gross_value_added_total_for_the_forest_sector_us_million": 79,
    "gross_value_added_wood_processing_us_million": 37,
    "rw_country_code": "SUR",
    "rw_country_name": "Suriname",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 9,
    "country": "Syrian Arab Republic",
    "employment_of_total_labour_force": 0.5,
    "employment_pulp_and_paper_1000": 4,
    "employment_roundwood_production_1000": 2,
    "employment_total_for_the_forest_sector_1000": 30,
    "employment_wood_processing_1000": 25,
    "gross_value_added_contribution_to_gdp": 0.4,
    "gross_value_added_pulp_and_paper_us_million": 50,
    "gross_value_added_roundwood_production_us_million": 6,
    "gross_value_added_total_for_the_forest_sector_us_million": 253,
    "gross_value_added_wood_processing_us_million": 197,
    "rw_country_code": "SYR",
    "rw_country_name": "Syria",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 10,
    "country": "Sweden",
    "employment_of_total_labour_force": 2,
    "employment_pulp_and_paper_1000": 32,
    "employment_roundwood_production_1000": 33,
    "employment_total_for_the_forest_sector_1000": 100,
    "employment_wood_processing_1000": 35,
    "gross_value_added_contribution_to_gdp": 2.9,
    "gross_value_added_pulp_and_paper_us_million": 5266,
    "gross_value_added_roundwood_production_us_million": 5894,
    "gross_value_added_total_for_the_forest_sector_us_million": 13841,
    "gross_value_added_wood_processing_us_million": 2681,
    "rw_country_code": "SWE",
    "rw_country_name": "Sweden",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 11,
    "country": "Tajikistan",
    "employment_of_total_labour_force": 0.1,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 2,
    "employment_total_for_the_forest_sector_1000": 2,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0.1,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 2,
    "gross_value_added_total_for_the_forest_sector_us_million": 5,
    "gross_value_added_wood_processing_us_million": 4,
    "rw_country_code": "TJK",
    "rw_country_name": "Tajikistan",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 12,
    "country": "The former Yugoslav Republic of Macedonia",
    "employment_of_total_labour_force": 0.7,
    "employment_pulp_and_paper_1000": 2,
    "employment_roundwood_production_1000": 3,
    "employment_total_for_the_forest_sector_1000": 7,
    "employment_wood_processing_1000": 2,
    "gross_value_added_contribution_to_gdp": 0.7,
    "gross_value_added_pulp_and_paper_us_million": 17,
    "gross_value_added_roundwood_production_us_million": 30,
    "gross_value_added_total_for_the_forest_sector_us_million": 61,
    "gross_value_added_wood_processing_us_million": 14,
    "rw_country_code": "MKD",
    "rw_country_name": "Macedonia",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 13,
    "country": "Svalbard and Jan Mayen Islands",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 0,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 0,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "",
    "rw_country_name": "",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 14,
    "country": "Switzerland",
    "employment_of_total_labour_force": 1.1,
    "employment_pulp_and_paper_1000": 10,
    "employment_roundwood_production_1000": 5,
    "employment_total_for_the_forest_sector_1000": 48,
    "employment_wood_processing_1000": 33,
    "gross_value_added_contribution_to_gdp": 0.8,
    "gross_value_added_pulp_and_paper_us_million": 1313,
    "gross_value_added_roundwood_production_us_million": 401,
    "gross_value_added_total_for_the_forest_sector_us_million": 5175,
    "gross_value_added_wood_processing_us_million": 3460,
    "rw_country_code": "CHE",
    "rw_country_name": "Switzerland",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 15,
    "country": "Thailand",
    "employment_of_total_labour_force": 0.6,
    "employment_pulp_and_paper_1000": 79,
    "employment_roundwood_production_1000": 31,
    "employment_total_for_the_forest_sector_1000": 235,
    "employment_wood_processing_1000": 125,
    "gross_value_added_contribution_to_gdp": 0.9,
    "gross_value_added_pulp_and_paper_us_million": 1693,
    "gross_value_added_roundwood_production_us_million": 308,
    "gross_value_added_total_for_the_forest_sector_us_million": 3169,
    "gross_value_added_wood_processing_us_million": 1168,
    "rw_country_code": "THA",
    "rw_country_name": "Thailand",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 16,
    "country": "Turkey",
    "employment_of_total_labour_force": 0.6,
    "employment_pulp_and_paper_1000": 48,
    "employment_roundwood_production_1000": 37,
    "employment_total_for_the_forest_sector_1000": 152,
    "employment_wood_processing_1000": 68,
    "gross_value_added_contribution_to_gdp": 0.8,
    "gross_value_added_pulp_and_paper_us_million": 1497,
    "gross_value_added_roundwood_production_us_million": 3077,
    "gross_value_added_total_for_the_forest_sector_us_million": 5632,
    "gross_value_added_wood_processing_us_million": 1058,
    "rw_country_code": "TUR",
    "rw_country_name": "Turkey",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 17,
    "country": "Turkmenistan",
    "employment_of_total_labour_force": 0.4,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 9,
    "employment_total_for_the_forest_sector_1000": 9,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 1,
    "gross_value_added_total_for_the_forest_sector_us_million": 1,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "TKM",
    "rw_country_name": "Turkmenistan",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 18,
    "country": "Tokelau",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 0,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 0,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "",
    "rw_country_name": "",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 19,
    "country": "Uganda",
    "employment_of_total_labour_force": 0.1,
    "employment_pulp_and_paper_1000": 1,
    "employment_roundwood_production_1000": 3,
    "employment_total_for_the_forest_sector_1000": 12,
    "employment_wood_processing_1000": 8,
    "gross_value_added_contribution_to_gdp": 3.4,
    "gross_value_added_pulp_and_paper_us_million": 5,
    "gross_value_added_roundwood_production_us_million": 570,
    "gross_value_added_total_for_the_forest_sector_us_million": 590,
    "gross_value_added_wood_processing_us_million": 15,
    "rw_country_code": "UGA",
    "rw_country_name": "Uganda",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 20,
    "country": "Tunisia",
    "employment_of_total_labour_force": 0.6,
    "employment_pulp_and_paper_1000": 3,
    "employment_roundwood_production_1000": 3,
    "employment_total_for_the_forest_sector_1000": 23,
    "employment_wood_processing_1000": 17,
    "gross_value_added_contribution_to_gdp": 0.8,
    "gross_value_added_pulp_and_paper_us_million": 99,
    "gross_value_added_roundwood_production_us_million": 62,
    "gross_value_added_total_for_the_forest_sector_us_million": 337,
    "gross_value_added_wood_processing_us_million": 175,
    "rw_country_code": "TUN",
    "rw_country_name": "Tunisia",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 21,
    "country": "Vanuatu",
    "employment_of_total_labour_force": 0.7,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 1,
    "employment_wood_processing_1000": 1,
    "gross_value_added_contribution_to_gdp": 1.6,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 8,
    "gross_value_added_total_for_the_forest_sector_us_million": 11,
    "gross_value_added_wood_processing_us_million": 3,
    "rw_country_code": "VUT",
    "rw_country_name": "Vanuatu",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 22,
    "country": "Uruguay",
    "employment_of_total_labour_force": 1,
    "employment_pulp_and_paper_1000": 2,
    "employment_roundwood_production_1000": 11,
    "employment_total_for_the_forest_sector_1000": 17,
    "employment_wood_processing_1000": 4,
    "gross_value_added_contribution_to_gdp": 1.8,
    "gross_value_added_pulp_and_paper_us_million": 441,
    "gross_value_added_roundwood_production_us_million": 194,
    "gross_value_added_total_for_the_forest_sector_us_million": 730,
    "gross_value_added_wood_processing_us_million": 94,
    "rw_country_code": "URY",
    "rw_country_name": "Uruguay",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 23,
    "country": "Viet Nam",
    "employment_of_total_labour_force": 0.5,
    "employment_pulp_and_paper_1000": 93,
    "employment_roundwood_production_1000": 29,
    "employment_total_for_the_forest_sector_1000": 251,
    "employment_wood_processing_1000": 129,
    "gross_value_added_contribution_to_gdp": 1.7,
    "gross_value_added_pulp_and_paper_us_million": 915,
    "gross_value_added_roundwood_production_us_million": 843,
    "gross_value_added_total_for_the_forest_sector_us_million": 2356,
    "gross_value_added_wood_processing_us_million": 598,
    "rw_country_code": "VNM",
    "rw_country_name": "Vietnam",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 24,
    "country": "Yemen",
    "employment_of_total_labour_force": 0.3,
    "employment_pulp_and_paper_1000": 3,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 19,
    "employment_wood_processing_1000": 15,
    "gross_value_added_contribution_to_gdp": 0.5,
    "gross_value_added_pulp_and_paper_us_million": 45,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 141,
    "gross_value_added_wood_processing_us_million": 96,
    "rw_country_code": "YEM",
    "rw_country_name": "Yemen",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 25,
    "country": "Belarus",
    "employment_of_total_labour_force": 2.5,
    "employment_pulp_and_paper_1000": 29,
    "employment_roundwood_production_1000": 36,
    "employment_total_for_the_forest_sector_1000": 113,
    "employment_wood_processing_1000": 47,
    "gross_value_added_contribution_to_gdp": 1.1,
    "gross_value_added_pulp_and_paper_us_million": 94,
    "gross_value_added_roundwood_production_us_million": 286,
    "gross_value_added_total_for_the_forest_sector_us_million": 575,
    "gross_value_added_wood_processing_us_million": 195,
    "rw_country_code": "BLR",
    "rw_country_name": "Belarus",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 26,
    "country": "Zimbabwe",
    "employment_of_total_labour_force": 0.1,
    "employment_pulp_and_paper_1000": 6,
    "employment_roundwood_production_1000": 1,
    "employment_total_for_the_forest_sector_1000": 9,
    "employment_wood_processing_1000": 2,
    "gross_value_added_contribution_to_gdp": 3.4,
    "gross_value_added_pulp_and_paper_us_million": 63,
    "gross_value_added_roundwood_production_us_million": 182,
    "gross_value_added_total_for_the_forest_sector_us_million": 266,
    "gross_value_added_wood_processing_us_million": 21,
    "rw_country_code": "ZWE",
    "rw_country_name": "Zimbabwe",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 27,
    "country": "Zambia",
    "employment_of_total_labour_force": 0.1,
    "employment_pulp_and_paper_1000": 2,
    "employment_roundwood_production_1000": 2,
    "employment_total_for_the_forest_sector_1000": 5,
    "employment_wood_processing_1000": 1,
    "gross_value_added_contribution_to_gdp": 6.2,
    "gross_value_added_pulp_and_paper_us_million": 159,
    "gross_value_added_roundwood_production_us_million": 851,
    "gross_value_added_total_for_the_forest_sector_us_million": 1203,
    "gross_value_added_wood_processing_us_million": 192,
    "rw_country_code": "ZMB",
    "rw_country_name": "Zambia",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 28,
    "country": "Botswana",
    "employment_of_total_labour_force": 0.2,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 1,
    "employment_total_for_the_forest_sector_1000": 2,
    "employment_wood_processing_1000": 1,
    "gross_value_added_contribution_to_gdp": 0.7,
    "gross_value_added_pulp_and_paper_us_million": 8,
    "gross_value_added_roundwood_production_us_million": 90,
    "gross_value_added_total_for_the_forest_sector_us_million": 97,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "BWA",
    "rw_country_name": "Botswana",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 29,
    "country": "Guinea",
    "employment_of_total_labour_force": 0.2,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 9,
    "employment_total_for_the_forest_sector_1000": 10,
    "employment_wood_processing_1000": 1,
    "gross_value_added_contribution_to_gdp": 4.3,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 206,
    "gross_value_added_total_for_the_forest_sector_us_million": 220,
    "gross_value_added_wood_processing_us_million": 14,
    "rw_country_code": "GIN",
    "rw_country_name": "Guinea",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 30,
    "country": "Greece",
    "employment_of_total_labour_force": 0.6,
    "employment_pulp_and_paper_1000": 8,
    "employment_roundwood_production_1000": 4,
    "employment_total_for_the_forest_sector_1000": 33,
    "employment_wood_processing_1000": 21,
    "gross_value_added_contribution_to_gdp": 0.4,
    "gross_value_added_pulp_and_paper_us_million": 313,
    "gross_value_added_roundwood_production_us_million": 71,
    "gross_value_added_total_for_the_forest_sector_us_million": 1038,
    "gross_value_added_wood_processing_us_million": 654,
    "rw_country_code": "GRC",
    "rw_country_name": "Greece",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 31,
    "country": "Guam",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 0,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 0,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "",
    "rw_country_name": "",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 32,
    "country": "Honduras",
    "employment_of_total_labour_force": 0.4,
    "employment_pulp_and_paper_1000": 2,
    "employment_roundwood_production_1000": 2,
    "employment_total_for_the_forest_sector_1000": 13,
    "employment_wood_processing_1000": 9,
    "gross_value_added_contribution_to_gdp": 0.8,
    "gross_value_added_pulp_and_paper_us_million": 25,
    "gross_value_added_roundwood_production_us_million": 87,
    "gross_value_added_total_for_the_forest_sector_us_million": 146,
    "gross_value_added_wood_processing_us_million": 34,
    "rw_country_code": "HND",
    "rw_country_name": "Honduras",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 33,
    "country": "Iran (Islamic Republic of)",
    "employment_of_total_labour_force": 0.1,
    "employment_pulp_and_paper_1000": 19,
    "employment_roundwood_production_1000": 6,
    "employment_total_for_the_forest_sector_1000": 35,
    "employment_wood_processing_1000": 10,
    "gross_value_added_contribution_to_gdp": 0.2,
    "gross_value_added_pulp_and_paper_us_million": 473,
    "gross_value_added_roundwood_production_us_million": 429,
    "gross_value_added_total_for_the_forest_sector_us_million": 1197,
    "gross_value_added_wood_processing_us_million": 295,
    "rw_country_code": "IRN",
    "rw_country_name": "Iran",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 34,
    "country": "India",
    "employment_of_total_labour_force": 0.1,
    "employment_pulp_and_paper_1000": 215,
    "employment_roundwood_production_1000": 246,
    "employment_total_for_the_forest_sector_1000": 707,
    "employment_wood_processing_1000": 246,
    "gross_value_added_contribution_to_gdp": 1.7,
    "gross_value_added_pulp_and_paper_us_million": 2509,
    "gross_value_added_roundwood_production_us_million": 28097,
    "gross_value_added_total_for_the_forest_sector_us_million": 30958,
    "gross_value_added_wood_processing_us_million": 352,
    "rw_country_code": "IND",
    "rw_country_name": "India",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 35,
    "country": "Hungary",
    "employment_of_total_labour_force": 1.3,
    "employment_pulp_and_paper_1000": 15,
    "employment_roundwood_production_1000": 19,
    "employment_total_for_the_forest_sector_1000": 56,
    "employment_wood_processing_1000": 22,
    "gross_value_added_contribution_to_gdp": 0.9,
    "gross_value_added_pulp_and_paper_us_million": 436,
    "gross_value_added_roundwood_production_us_million": 280,
    "gross_value_added_total_for_the_forest_sector_us_million": 1005,
    "gross_value_added_wood_processing_us_million": 288,
    "rw_country_code": "HUN",
    "rw_country_name": "Hungary",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 36,
    "country": "Iceland",
    "employment_of_total_labour_force": 0.3,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 0,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0.2,
    "gross_value_added_pulp_and_paper_us_million": 3,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 29,
    "gross_value_added_wood_processing_us_million": 26,
    "rw_country_code": "ISL",
    "rw_country_name": "Iceland",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 37,
    "country": "Iraq",
    "employment_of_total_labour_force": 0.1,
    "employment_pulp_and_paper_1000": 5,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 5,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0,
    "gross_value_added_pulp_and_paper_us_million": 11,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 22,
    "gross_value_added_wood_processing_us_million": 11,
    "rw_country_code": "IRQ",
    "rw_country_name": "Iraq",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 38,
    "country": "Holy See",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 0,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 0,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "",
    "rw_country_name": "",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 39,
    "country": "Indonesia",
    "employment_of_total_labour_force": 0.4,
    "employment_pulp_and_paper_1000": 131,
    "employment_roundwood_production_1000": 103,
    "employment_total_for_the_forest_sector_1000": 445,
    "employment_wood_processing_1000": 211,
    "gross_value_added_contribution_to_gdp": 1.7,
    "gross_value_added_pulp_and_paper_us_million": 6860,
    "gross_value_added_roundwood_production_us_million": 5904,
    "gross_value_added_total_for_the_forest_sector_us_million": 14570,
    "gross_value_added_wood_processing_us_million": 1805,
    "rw_country_code": "IDN",
    "rw_country_name": "Indonesia",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 40,
    "country": "United Arab Emirates",
    "employment_of_total_labour_force": 0.1,
    "employment_pulp_and_paper_1000": 6,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 7,
    "employment_wood_processing_1000": 1,
    "gross_value_added_contribution_to_gdp": 0.1,
    "gross_value_added_pulp_and_paper_us_million": 480,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 480,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "ARE",
    "rw_country_name": "United Arab Emirates",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 41,
    "country": "Ukraine",
    "employment_of_total_labour_force": 0.6,
    "employment_pulp_and_paper_1000": 29,
    "employment_roundwood_production_1000": 65,
    "employment_total_for_the_forest_sector_1000": 142,
    "employment_wood_processing_1000": 48,
    "gross_value_added_contribution_to_gdp": 1,
    "gross_value_added_pulp_and_paper_us_million": 646,
    "gross_value_added_roundwood_production_us_million": 439,
    "gross_value_added_total_for_the_forest_sector_us_million": 1508,
    "gross_value_added_wood_processing_us_million": 423,
    "rw_country_code": "UKR",
    "rw_country_name": "Ukraine",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 42,
    "country": "United Republic of Tanzania",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 3,
    "employment_roundwood_production_1000": 3,
    "employment_total_for_the_forest_sector_1000": 7,
    "employment_wood_processing_1000": 1,
    "gross_value_added_contribution_to_gdp": 2.7,
    "gross_value_added_pulp_and_paper_us_million": 2,
    "gross_value_added_roundwood_production_us_million": 598,
    "gross_value_added_total_for_the_forest_sector_us_million": 613,
    "gross_value_added_wood_processing_us_million": 13,
    "rw_country_code": "TZA",
    "rw_country_name": "United Republic of Tanzania",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 43,
    "country": "Malaysia",
    "employment_of_total_labour_force": 1.7,
    "employment_pulp_and_paper_1000": 63,
    "employment_roundwood_production_1000": 43,
    "employment_total_for_the_forest_sector_1000": 210,
    "employment_wood_processing_1000": 104,
    "gross_value_added_contribution_to_gdp": 2,
    "gross_value_added_pulp_and_paper_us_million": 1038,
    "gross_value_added_roundwood_production_us_million": 3051,
    "gross_value_added_total_for_the_forest_sector_us_million": 5702,
    "gross_value_added_wood_processing_us_million": 1613,
    "rw_country_code": "MYS",
    "rw_country_name": "Malaysia",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 44,
    "country": "Mauritania",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 0,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 0.1,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 2,
    "gross_value_added_total_for_the_forest_sector_us_million": 2,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "MRT",
    "rw_country_name": "Mauritania",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 45,
    "country": "Mali",
    "employment_of_total_labour_force": 0,
    "employment_pulp_and_paper_1000": 0,
    "employment_roundwood_production_1000": 1,
    "employment_total_for_the_forest_sector_1000": 1,
    "employment_wood_processing_1000": 0,
    "gross_value_added_contribution_to_gdp": 4.4,
    "gross_value_added_pulp_and_paper_us_million": 0,
    "gross_value_added_roundwood_production_us_million": 423,
    "gross_value_added_total_for_the_forest_sector_us_million": 423,
    "gross_value_added_wood_processing_us_million": 0,
    "rw_country_code": "MLI",
    "rw_country_name": "Mali",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 46,
    "country": "Madagascar",
    "employment_of_total_labour_force": 0.4,
    "employment_pulp_and_paper_1000": 1,
    "employment_roundwood_production_1000": 4,
    "employment_total_for_the_forest_sector_1000": 45,
    "employment_wood_processing_1000": 41,
    "gross_value_added_contribution_to_gdp": 4.3,
    "gross_value_added_pulp_and_paper_us_million": 8,
    "gross_value_added_roundwood_production_us_million": 371,
    "gross_value_added_total_for_the_forest_sector_us_million": 401,
    "gross_value_added_wood_processing_us_million": 23,
    "rw_country_code": "MDG",
    "rw_country_name": "Madagascar",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 47,
    "country": "Oman",
    "employment_of_total_labour_force": 0.3,
    "employment_pulp_and_paper_1000": 1,
    "employment_roundwood_production_1000": 0,
    "employment_total_for_the_forest_sector_1000": 3,
    "employment_wood_processing_1000": 3,
    "gross_value_added_contribution_to_gdp": 0.2,
    "gross_value_added_pulp_and_paper_us_million": 59,
    "gross_value_added_roundwood_production_us_million": 0,
    "gross_value_added_total_for_the_forest_sector_us_million": 111,
    "gross_value_added_wood_processing_us_million": 52,
    "rw_country_code": "OMN",
    "rw_country_name": "Oman",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 48,
    "country": "Panama",
    "employment_of_total_labour_force": 0.3,
    "employment_pulp_and_paper_1000": 2,
    "employment_roundwood_production_1000": 2,
    "employment_total_for_the_forest_sector_1000": 5,
    "employment_wood_processing_1000": 1,
    "gross_value_added_contribution_to_gdp": 0.3,
    "gross_value_added_pulp_and_paper_us_million": 32,
    "gross_value_added_roundwood_production_us_million": 53,
    "gross_value_added_total_for_the_forest_sector_us_million": 92,
    "gross_value_added_wood_processing_us_million": 7,
    "rw_country_code": "PAN",
    "rw_country_name": "Panama",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 49,
    "country": "Poland",
    "employment_of_total_labour_force": 1.4,
    "employment_pulp_and_paper_1000": 57,
    "employment_roundwood_production_1000": 48,
    "employment_total_for_the_forest_sector_1000": 251,
    "employment_wood_processing_1000": 147,
    "gross_value_added_contribution_to_gdp": 1.6,
    "gross_value_added_pulp_and_paper_us_million": 2325,
    "gross_value_added_roundwood_production_us_million": 1826,
    "gross_value_added_total_for_the_forest_sector_us_million": 7070,
    "gross_value_added_wood_processing_us_million": 2919,
    "rw_country_code": "POL",
    "rw_country_name": "Poland",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
  Object {
    "cartodb_id": 50,
    "country": "Portugal",
    "employment_of_total_labour_force": 1.1,
    "employment_pulp_and_paper_1000": 12,
    "employment_roundwood_production_1000": 10,
    "employment_total_for_the_forest_sector_1000": 63,
    "employment_wood_processing_1000": 41,
    "gross_value_added_contribution_to_gdp": 1.6,
    "gross_value_added_pulp_and_paper_us_million": 1251,
    "gross_value_added_roundwood_production_us_million": 956,
    "gross_value_added_total_for_the_forest_sector_us_million": 3281,
    "gross_value_added_wood_processing_us_million": 1075,
    "rw_country_code": "PRT",
    "rw_country_name": "Portugal",
    "the_geom": null,
    "the_geom_webmercator": null,
    "year": null,
  },
]
`;

exports[`RW Adapter tests Adapter getDatasetFields returns expected result 1`] = `
Array [
  Object {
    "columnName": "country",
    "metadata": Object {
      "alias": "Country",
      "description": undefined,
    },
    "type": "string",
  },
  Object {
    "columnName": "employment_of_total_labour_force",
    "metadata": Object {
      "alias": "Forest Sector Employment as Share of Total Workforce",
      "description": "Percent of the workforce in forest sector employment",
    },
    "type": "number",
  },
  Object {
    "columnName": "employment_pulp_and_paper_1000",
    "metadata": Object {
      "alias": "Pulp and Paper Employment (thousands)",
      "description": undefined,
    },
    "type": "number",
  },
  Object {
    "columnName": "employment_roundwood_production_1000",
    "metadata": Object {
      "alias": "Roundwood Production Employment (thousands)",
      "description": "",
    },
    "type": "number",
  },
  Object {
    "columnName": "employment_total_for_the_forest_sector_1000",
    "metadata": Object {
      "alias": "Total Forest Sector Employment (thousands)",
      "description": undefined,
    },
    "type": "number",
  },
  Object {
    "columnName": "employment_wood_processing_1000",
    "metadata": Object {
      "alias": "Wood Processing Employment (thousands)",
      "description": undefined,
    },
    "type": "number",
  },
  Object {
    "columnName": "gross_value_added_contribution_to_gdp",
    "metadata": Object {
      "alias": "Gross Value Added as Share of GDP",
      "description": "Contribution of gross value added to GDP",
    },
    "type": "number",
  },
  Object {
    "columnName": "gross_value_added_pulp_and_paper_us_million",
    "metadata": Object {
      "alias": "Gross Value Added in Pulp and Paper (USD, millions)",
      "description": "Value added to economy in million USD",
    },
    "type": "number",
  },
  Object {
    "columnName": "gross_value_added_roundwood_production_us_million",
    "metadata": Object {
      "alias": "Gross Value Added in Roundwood Production (USD, millions)",
      "description": "Value added to economy in million USD",
    },
    "type": "number",
  },
  Object {
    "columnName": "gross_value_added_total_for_the_forest_sector_us_million",
    "metadata": Object {
      "alias": "Total Gross Value Added (USD, millions)",
      "description": "Total value added to economy in million USD",
    },
    "type": "number",
  },
  Object {
    "columnName": "gross_value_added_wood_processing_us_million",
    "metadata": Object {
      "alias": "Gross Value Added in Wood Processing (USD, millions)",
      "description": "Value added to economy in million USD",
    },
    "type": "number",
  },
]
`;

exports[`RW Adapter tests Adapter getDatasetLayers returns expected result 1`] = `
Array [
  Object {
    "datasetId": "03bfb30e-829f-4299-bab9-b2be1b66b5d4",
    "default": true,
    "description": "2011 Forest Sector Gross Value Added (US$, millions)",
    "id": "60b5e4cc-9564-47fb-9132-7701f5ace504",
    "interactionConfig": Object {
      "output": Array [
        Object {
          "column": "rw_country_name",
          "format": null,
          "prefix": "",
          "property": "Country",
          "suffix": "",
          "type": "string",
        },
        Object {
          "column": "gross_value_added_total_for_the_forest_sector_us_million",
          "format": "0,0",
          "prefix": "$",
          "property": "Value Added by Forest Sector",
          "suffix": " million",
          "type": "number",
        },
      ],
    },
    "layerConfig": Object {
      "account": "wri-rw",
      "body": Object {
        "layers": Array [
          Object {
            "options": Object {
              "cartocss": "#for_020_forest_employment_gdp_edit {polygon-opacity:1; line-width:0.5; line-color:#FFF; line-opacity:1;} [gross_value_added_total_for_the_forest_sector_us_million>=100000]{polygon-fill:#0868ac;} [gross_value_added_total_for_the_forest_sector_us_million>=10000][gross_value_added_total_for_the_forest_sector_us_million<100000]{polygon-fill:#43a2ca;} [gross_value_added_total_for_the_forest_sector_us_million>=1000][gross_value_added_total_for_the_forest_sector_us_million<10000]{polygon-fill:#7bccc4;} [gross_value_added_total_for_the_forest_sector_us_million>=100][gross_value_added_total_for_the_forest_sector_us_million<1000]{polygon-fill:#bae4bc;} [gross_value_added_total_for_the_forest_sector_us_million<100]{polygon-fill:#f0f9e8;}",
              "cartocss_version": "2.3.0",
              "sql": "SELECT wri.cartodb_id, wri.the_geom_webmercator, data.rw_country_name, data.employment_total_for_the_forest_sector_1000, data.gross_value_added_total_for_the_forest_sector_us_million FROM for_020_forest_employment_gdp_edit data LEFT OUTER JOIN wri_countries_a wri ON wri.iso_a3=data.rw_country_code WHERE data.gross_value_added_total_for_the_forest_sector_us_million IS NOT NULL",
            },
            "type": "mapnik",
          },
        ],
        "maxzoom": 18,
        "vectorLayers": Array [
          Object {
            "filter": Array [
              "all",
            ],
            "paint": Object {
              "fill-color": Array [
                "step",
                Array [
                  "to-number",
                  Array [
                    "get",
                    "gross_value_added_total_for_the_forest_sector_us_million",
                  ],
                ],
                "#f0f9e8",
                100,
                "#bae4bc",
                1000,
                "#7bccc4",
                10000,
                "#43a2ca",
                100000,
                "#0868ac",
              ],
              "fill-opacity": 1,
            },
            "source-layer": "layer0",
            "type": "fill",
          },
          Object {
            "filter": Array [
              "all",
            ],
            "paint": Object {
              "line-color": "#fff",
              "line-opacity": 0.8,
              "line-width": 0.5,
            },
            "source-layer": "layer0",
            "type": "line",
          },
        ],
      },
      "layerType": "vector",
    },
    "legendConfig": Object {
      "items": Array [
        Object {
          "color": "#f0f9e8",
          "id": 0,
          "name": "<100",
        },
        Object {
          "color": "#bae4bc",
          "id": 1,
          "name": "<1,000",
        },
        Object {
          "color": "#7bccc4",
          "id": 2,
          "name": "<10,000",
        },
        Object {
          "color": "#43a2ca",
          "id": 3,
          "name": "<100,000",
        },
        Object {
          "color": "#0868ac",
          "id": 4,
          "name": "≥100,000",
        },
      ],
      "type": "choropleth",
    },
    "name": "2011 Forest Sector Gross Value Added (US$, millions)",
    "provider": "cartodb",
    "tileUrl": "https://api.resourcewatch.org/v1/layer/60b5e4cc-9564-47fb-9132-7701f5ace504/tile/cartodb/{z}/{x}/{y}",
  },
  Object {
    "datasetId": "03bfb30e-829f-4299-bab9-b2be1b66b5d4",
    "default": false,
    "description": "2011 Forest Sector Employment (thousands)",
    "id": "2bb367e3-adba-4ca1-ba96-eb58014deaec",
    "interactionConfig": Object {
      "output": Array [
        Object {
          "column": "rw_country_name",
          "format": null,
          "prefix": "",
          "property": "Country",
          "suffix": "",
          "type": "string",
        },
        Object {
          "column": "employment_total_for_the_forest_sector_1000",
          "format": null,
          "prefix": "",
          "property": "Forest Sector Employment",
          "suffix": " thousand",
          "type": "number",
        },
      ],
    },
    "layerConfig": Object {
      "account": "wri-rw",
      "body": Object {
        "layers": Array [
          Object {
            "options": Object {
              "cartocss": "#for_020_forest_employment_gdp_edit {polygon-opacity:1; line-width:0.5; line-color:#FFF; line-opacity:1;} [employment_total_for_the_forest_sector_1000>=1000]{polygon-fill:#016c59;} [employment_total_for_the_forest_sector_1000>=100][employment_total_for_the_forest_sector_1000<1000]{polygon-fill:#1c9099;} [employment_total_for_the_forest_sector_1000>=10][employment_total_for_the_forest_sector_1000<100]{polygon-fill:#67a9cf;} [employment_total_for_the_forest_sector_1000>=1][employment_total_for_the_forest_sector_1000<10]{polygon-fill:#bdc9e1;} [employment_total_for_the_forest_sector_1000<1]{polygon-fill:#f6eff7;}",
              "cartocss_version": "2.3.0",
              "sql": "SELECT wri.cartodb_id, wri.the_geom_webmercator, data.rw_country_name, data.employment_total_for_the_forest_sector_1000, data.gross_value_added_total_for_the_forest_sector_us_million FROM for_020_forest_employment_gdp_edit data LEFT OUTER JOIN wri_countries_a wri ON wri.iso_a3=data.rw_country_code WHERE data.employment_total_for_the_forest_sector_1000 IS NOT NULL",
            },
            "type": "mapnik",
          },
        ],
        "maxzoom": 18,
        "vectorLayers": Array [
          Object {
            "filter": Array [
              "all",
            ],
            "paint": Object {
              "fill-color": Array [
                "step",
                Array [
                  "to-number",
                  Array [
                    "get",
                    "employment_total_for_the_forest_sector_1000",
                  ],
                ],
                "#f6eff7",
                1,
                "#bdc9e1",
                10,
                "#67a9cf",
                100,
                "#1c9099",
                1000,
                "#016c59",
              ],
              "fill-opacity": 1,
            },
            "source-layer": "layer0",
            "type": "fill",
          },
          Object {
            "filter": Array [
              "all",
            ],
            "paint": Object {
              "line-color": "#fff",
              "line-opacity": 0.8,
              "line-width": 0.5,
            },
            "source-layer": "layer0",
            "type": "line",
          },
        ],
      },
      "layerType": "vector",
    },
    "legendConfig": Object {
      "items": Array [
        Object {
          "color": "#f6eff7",
          "id": 0,
          "name": "<1",
        },
        Object {
          "color": "#bdc9e1",
          "id": 1,
          "name": "<10",
        },
        Object {
          "color": "#67a9cf",
          "id": 2,
          "name": "<100",
        },
        Object {
          "color": "#1c9099",
          "id": 3,
          "name": "<1,000",
        },
        Object {
          "color": "#016c59",
          "id": 4,
          "name": "≥1,000",
        },
      ],
      "type": "choropleth",
    },
    "name": "2011 Forest Sector Employment (thousands)",
    "provider": "cartodb",
    "tileUrl": "https://api.resourcewatch.org/v1/layer/2bb367e3-adba-4ca1-ba96-eb58014deaec/tile/cartodb/{z}/{x}/{y}",
  },
]
`;

exports[`RW Adapter tests Adapter getLayer returns expected result 1`] = `
Object {
  "datasetId": "03bfb30e-829f-4299-bab9-b2be1b66b5d4",
  "default": false,
  "description": "2011 Forest Sector Employment (thousands)",
  "id": "2bb367e3-adba-4ca1-ba96-eb58014deaec",
  "interactionConfig": Object {
    "output": Array [
      Object {
        "column": "rw_country_name",
        "format": null,
        "prefix": "",
        "property": "Country",
        "suffix": "",
        "type": "string",
      },
      Object {
        "column": "employment_total_for_the_forest_sector_1000",
        "format": null,
        "prefix": "",
        "property": "Forest Sector Employment",
        "suffix": " thousand",
        "type": "number",
      },
    ],
  },
  "layerConfig": Object {
    "account": "wri-rw",
    "body": Object {
      "layers": Array [
        Object {
          "options": Object {
            "cartocss": "#for_020_forest_employment_gdp_edit {polygon-opacity:1; line-width:0.5; line-color:#FFF; line-opacity:1;} [employment_total_for_the_forest_sector_1000>=1000]{polygon-fill:#016c59;} [employment_total_for_the_forest_sector_1000>=100][employment_total_for_the_forest_sector_1000<1000]{polygon-fill:#1c9099;} [employment_total_for_the_forest_sector_1000>=10][employment_total_for_the_forest_sector_1000<100]{polygon-fill:#67a9cf;} [employment_total_for_the_forest_sector_1000>=1][employment_total_for_the_forest_sector_1000<10]{polygon-fill:#bdc9e1;} [employment_total_for_the_forest_sector_1000<1]{polygon-fill:#f6eff7;}",
            "cartocss_version": "2.3.0",
            "sql": "SELECT wri.cartodb_id, wri.the_geom_webmercator, data.rw_country_name, data.employment_total_for_the_forest_sector_1000, data.gross_value_added_total_for_the_forest_sector_us_million FROM for_020_forest_employment_gdp_edit data LEFT OUTER JOIN wri_countries_a wri ON wri.iso_a3=data.rw_country_code WHERE data.employment_total_for_the_forest_sector_1000 IS NOT NULL",
          },
          "type": "mapnik",
        },
      ],
      "maxzoom": 18,
      "vectorLayers": Array [
        Object {
          "filter": Array [
            "all",
          ],
          "paint": Object {
            "fill-color": Array [
              "step",
              Array [
                "to-number",
                Array [
                  "get",
                  "employment_total_for_the_forest_sector_1000",
                ],
              ],
              "#f6eff7",
              1,
              "#bdc9e1",
              10,
              "#67a9cf",
              100,
              "#1c9099",
              1000,
              "#016c59",
            ],
            "fill-opacity": 1,
          },
          "source-layer": "layer0",
          "type": "fill",
        },
        Object {
          "filter": Array [
            "all",
          ],
          "paint": Object {
            "line-color": "#fff",
            "line-opacity": 0.8,
            "line-width": 0.5,
          },
          "source-layer": "layer0",
          "type": "line",
        },
      ],
    },
    "layerType": "vector",
  },
  "legendConfig": Object {
    "items": Array [
      Object {
        "color": "#f6eff7",
        "id": 0,
        "name": "<1",
      },
      Object {
        "color": "#bdc9e1",
        "id": 1,
        "name": "<10",
      },
      Object {
        "color": "#67a9cf",
        "id": 2,
        "name": "<100",
      },
      Object {
        "color": "#1c9099",
        "id": 3,
        "name": "<1,000",
      },
      Object {
        "color": "#016c59",
        "id": 4,
        "name": "≥1,000",
      },
    ],
    "type": "choropleth",
  },
  "name": "2011 Forest Sector Employment (thousands)",
  "provider": "cartodb",
  "tileUrl": "https://api.resourcewatch.org/v1/layer/2bb367e3-adba-4ca1-ba96-eb58014deaec/tile/cartodb/{z}/{x}/{y}",
}
`;

exports[`RW Adapter tests Adapter getUserAreas returns expected result 1`] = `Array []`;

exports[`RW Adapter tests Adapter getUserAreas returns expected result 2`] = `Array []`;

exports[`RW Adapter tests Adapter getWidget returns expected result 1`] = `
Object {
  "datasetId": "03bfb30e-829f-4299-bab9-b2be1b66b5d4",
  "description": "",
  "id": "e60bba32-d1c8-4d86-bd44-ba3a56a7d717",
  "metadata": Object {
    "caption": undefined,
  },
  "name": "Forestry sector employment",
  "widgetConfig": Object {
    "axes": Array [
      Object {
        "encode": Object {
          "labels": Object {
            "update": Object {
              "align": Object {
                "signal": "width < 300 || data('table')[0].count > 10 ? 'right' : 'center'",
              },
              "angle": Object {
                "signal": "width < 300 || data('table')[0].count > 10 ? -90 :0 ",
              },
              "baseline": Object {
                "signal": "width < 300 || data('table')[0].count > 10 ? 'middle' : 'top'",
              },
              "text": Object {
                "signal": "width < 300 || data('table')[0].count > 10 ? truncate(data('table')[datum.value - 1].x, 12) : data('table')[datum.value - 1].x",
              },
            },
          },
        },
        "labelOverlap": "parity",
        "orient": "bottom",
        "scale": "x",
        "ticks": false,
      },
      Object {
        "encode": Object {
          "labels": Object {
            "update": Object {
              "align": Object {
                "value": "right",
              },
              "baseline": Object {
                "value": "bottom",
              },
            },
          },
        },
        "format": "s",
        "labelOverlap": "parity",
        "orient": "left",
        "scale": "y",
      },
    ],
    "config": null,
    "data": Array [
      Object {
        "format": Object {
          "property": "data",
          "type": "json",
        },
        "name": "table",
        "transform": Array [
          Object {
            "as": "id",
            "type": "identifier",
          },
          Object {
            "as": Array [
              "count",
            ],
            "type": "joinaggregate",
          },
        ],
        "url": "https://api.resourcewatch.org/v1/query/03bfb30e-829f-4299-bab9-b2be1b66b5d4?sql=SELECT country as x, employment_of_total_labour_force as y FROM for_020_forest_employment_gdp_edit   ORDER BY employment_of_total_labour_force desc LIMIT 50&rw=&env=production&language=en&page[size]=999",
      },
    ],
    "interaction_config": Array [
      Object {
        "config": Object {
          "fields": Array [
            Object {
              "column": "y",
              "format": ".2s",
              "property": "Forest Sector Employment as Share of Total Workforce",
              "type": "number",
            },
            Object {
              "column": "x",
              "format": ".2f",
              "property": "Country",
              "type": "string",
            },
          ],
        },
        "name": "tooltip",
      },
    ],
    "marks": Array [
      Object {
        "encode": Object {
          "hover": Object {
            "opacity": Object {
              "value": 0.8,
            },
          },
          "update": Object {
            "opacity": Object {
              "value": 1,
            },
            "width": Object {
              "band": 1,
              "scale": "x",
            },
            "x": Object {
              "field": "id",
              "scale": "x",
            },
            "y": Object {
              "field": "y",
              "scale": "y",
            },
            "y2": Object {
              "scale": "y",
              "value": 0,
            },
          },
        },
        "from": Object {
          "data": "table",
        },
        "type": "rect",
      },
    ],
    "paramsConfig": Object {
      "aggregateFunction": null,
      "areaIntersection": null,
      "band": null,
      "category": Object {
        "alias": "Country",
        "datasetID": "03bfb30e-829f-4299-bab9-b2be1b66b5d4",
        "name": "country",
        "tableName": "for_020_forest_employment_gdp_edit",
        "type": "string",
      },
      "chartType": "bar",
      "color": null,
      "filters": Array [],
      "layer": null,
      "limit": 50,
      "orderBy": Object {
        "alias": "Forest Sector Employment as Share of Total Workforce",
        "name": "employment_of_total_labour_force",
        "orderType": "desc",
        "type": "number",
      },
      "size": null,
      "value": Object {
        "alias": "Forest Sector Employment as Share of Total Workforce",
        "datasetID": "03bfb30e-829f-4299-bab9-b2be1b66b5d4",
        "name": "employment_of_total_labour_force",
        "tableName": "for_020_forest_employment_gdp_edit",
        "type": "number",
      },
      "visualizationType": "chart",
    },
    "scales": Array [
      Object {
        "domain": Object {
          "data": "table",
          "field": "id",
        },
        "name": "x",
        "padding": 0.05,
        "range": "width",
        "type": "band",
      },
      Object {
        "domain": Object {
          "data": "table",
          "field": "y",
        },
        "name": "y",
        "nice": true,
        "range": "height",
        "type": "linear",
        "zero": true,
      },
    ],
  },
}
`;
